--- a/config_folder/config_ac.yaml
+++ b/config_folder/config_ac.yaml
@@ -10,7 +10,7 @@ num_train_states: 1100000
 stddev_schedule: 'linear(1.0,0.1,100000)'
 action_repeat: 10
 # train settings
-num_seed_states: 4000
+num_seed_states: 1000
 # eval
 eval_every_states: 2000
 num_eval_episodes: 1
@@ -31,7 +31,7 @@ critic_tau: 0.005
 alpha_lr: 1e-4
 batch_size: 1024
 num_expl_steps: ${num_seed_states}
-params_range: [0.001, 1.]
+params_range: [[0.99, 1.1], [0.099, 0.11], [0.99, 1.1], [0.099, 0.11], [0.00099, 0.0011]]
 
 #MPC config
 T: 30
