--- a/config_folder/config_ac.yaml
+++ b/config_folder/config_ac.yaml
@@ -6,11 +6,11 @@ defaults:
 
 
 env: CartPole-BT-v0 #CartPole-BT-dL-v0, CartPole-BT-dH-v0
-num_train_states: 1100000
+num_train_states: 200000
 stddev_schedule: 'linear(1.0,0.1,100000)'
 action_repeat: 10
 # train settings
-num_seed_states: 1000
+num_seed_states: 1600
 # eval
 eval_every_states: 2000
 num_eval_episodes: 1
